--- a/cpp09/.vscode/settings.json
+++ b/cpp09/.vscode/settings.json
@@ -67,7 +67,11 @@
         "chrono": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "utility": "cpp",
+        "__functional_base": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
